<resources>
    <!-- Page d'accueil -->
    <string name="app_name">Eplant</string>

    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_plante_item">Mes plantes</string>
    <string name="bottom_add_plant_item">Photo</string>

    <!-- Page de connexion -->
    <string name="sign_in">Sign In</string>

    <!-- Page d'inscription -->
    <string name="sign_up">Sign Up</string>

    <!-- Page home -->
    <string name="home_page_title">Home</string>
    <string name="home_page_notifications">Mes notifications</string>

    <!-- Page registration des plantes -->
    <string name="add_plant_page_title">Ajouter une plante</string>
    <string name="add_plant_page_upload_button">image</string>
    <string name="add_plant_page_name_input">@string/item_plant_name</string>
    <string name="add_plant_page_description_input">@string/item_plant_description</string>

    <!-- Page mes plantes -->
    <string name="mes_plantes_page_title">Mes plantes</string>
    <string name="item_plant_description">Description de la plante</string>
    <string name="item_plant_name">Nom de la plante</string>

    <string-array name="add_plant_page_grow_spinner">
        <item> Croissance : Lente </item>
        <item> Croissance : Moyenne </item>
        <item> Croissance : Rapide </item>
    </string-array>

    <string-array name="add_plant_page_water_spinner">
        <item> Consommation : Faible </item>
        <item> Consommation : Moyenne </item>
        <item> Consommation : Elevé </item>
    </string-array>

    <string name="add_plant_page_confirm_button">Enregistrer</string>
    <string name="add_plant_lens">Identifier avec LENS</string>

    <string name="popup_plant_name">Plant Name</string>
    <string name="popup_plant_description_title">Description</string>
    <string name="popup_plant_description_subtitle">Petite description</string>
    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_grow_subtitle">Lente</string>
    <string name="popup_plant_water_title">Consommation Eau</string>
    <string name="popup_plant_water_subtitle">Faible</string>

</resources>