<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant_page_upload_button"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:padding="@dimen/default_margin"
            style="@style/TitleTextStyle" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending2"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/primary"
        android:text="@string/add_plant_lens"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_plant_page_name_input"
        style="@style/DefaultTextStyle"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingLeft="@dimen/default_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/add_plant_page_description_input"
        style="@style/DefaultTextStyle"
        android:layout_marginTop="@dimen/default_margin"
        android:paddingLeft="@dimen/default_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/darkGray"
        android:text="@string/add_plant_page_confirm_button"
        android:textColor="@color/white"/>

</LinearLayout>